Fix Low review item: Document zero-means-infinite in timeout type
Added clarification that a value of zero implies infinite timeout to the
Arm_Timeout field description in packed_arm_timeout.record.yaml.

--- a/src/components/command_protector/types/packed_arm_timeout.record.yaml
+++ b/src/components/command_protector/types/packed_arm_timeout.record.yaml
@@ -4,6 +4,6 @@ preamble: |
   type Arm_Timeout_Type is new Natural range 0 .. 255;
 fields:
   - name: Timeout
-    description: The timeout value (in ticks).
+    description: The timeout value (in ticks). A value of zero implies infinite timeout.
     type: Arm_Timeout_Type
     format: U8
