Fix Medium review item: No test for counter saturation/overflow
Add Test_Counter_Saturation that sets the reject counter to
Unsigned_16'Last - 1, sends rejected commands, and verifies the counter
saturates at the maximum value without wrapping to zero.

--- a/src/components/command_rejector/test/command_rejector.tests.yaml
+++ b/src/components/command_rejector/test/command_rejector.tests.yaml
@@ -7,3 +7,5 @@ tests:
     description: This unit test tests that a command not on the reject list is passed along.
   - name: Test_Command_Reject
     description: This unit test tests that a command on the reject list is dropped by the component.
+  - name: Test_Counter_Saturation
+    description: This unit test verifies that the reject counter saturates at Unsigned_16'Last instead of wrapping to zero.
