--- a/src/components/command_rejector/command_rejector.requirements.yaml
+++ b/src/components/command_rejector/command_rejector.requirements.yaml
@@ -3,5 +3,8 @@ description: The requirements for the Command Rejector component are specified b
 requirements:
   - text: The component shall be configured with a list of command IDs to reject upon initialization.
   - text: The component shall reject commands if found in the command reject list.
-  - text: The component shall report the number of commands rejected in telemetry
+  - text: The component shall report the number of commands rejected in telemetry.
+  - text: The component shall forward commands not found in the command reject list.
+  - text: The component shall produce an error packet containing any rejected command.
+  - text: The component shall emit an event identifying each rejected command.
 
