--- a/src/components/command_router/router_table/test/router_table.tests.yaml
+++ b/src/components/command_router/router_table/test/router_table.tests.yaml
@@ -3,3 +3,5 @@ description: This is a unit test suite for the router_table object
 tests:
   - name: Add_To_Table
     description: This unit test adds registration elements to the router table and asserts for correct table size and searching
+  - name: Single_Entry_Table
+    description: This unit test exercises the boundary condition of a table with capacity 1, verifying add, full, lookup, and destroy behavior
