Fix Medium review item: T_Send_Dropped Silently Null
Implement T_Send_Dropped to emit a warning event when forwarded data
is dropped due to a full downstream queue. Added T_Send_Dropped event
to events YAML. Silent data loss on the primary pass-through connector
is unacceptable in a safety-critical system.

--- a/src/components/connector_counter_8/connector_counter_8.events.yaml
+++ b/src/components/connector_counter_8/connector_counter_8.events.yaml
@@ -2,6 +2,9 @@
 events:
   - name: Count_Reset
     description: A command was received to reset the count.
+  - name: T_Send_Dropped
+    description: A forwarded connector invocation was dropped due to a full downstream queue. Data has been lost.
+    severity: warning
   - name: Invalid_Command_Received
     description: A command was received with invalid parameters.
     param_type: Invalid_Command_Info.T
