--- a/src/components/connector_counter_8/connector_counter_8.component.yaml
+++ b/src/components/connector_counter_8/connector_counter_8.component.yaml
@@ -22,7 +22,7 @@ connectors:
   - description: Events are sent out of this connector.
     type: Event.T
     kind: send
-  - description: This connector is used to register the components commands with the command router component.
+  - description: Command responses are sent out of this connector.
     type: Command_Response.T
     kind: send
   - description: The command receive connector.
