Fix Low review item: Events YAML Missing Top-Level Description
Added top-level description field to events YAML for consistency
with commands and data products YAML files.

--- a/src/components/connector_counter_8/connector_counter_8.events.yaml
+++ b/src/components/connector_counter_8/connector_counter_8.events.yaml
@@ -1,4 +1,5 @@
 ---
+description: Events for the connector counter component.
 events:
   - name: Count_Reset
     description: A command was received to reset the count.
